feat: create new doctor
